[x/go.dev] fix card spacing issues on tablet

X-GoDev-Commit: 8ecae1c3ed89698ead064c33432cef4d82437c82

--- a/go.dev/assets/css/styles.css
+++ b/go.dev/assets/css/styles.css
@@ -1990,7 +1990,9 @@ a.WhoUsesCaseStudy-librariesViewMoreLink {
 
   .Learn-card {
     height: 25rem;
-    width: 16.875rem;
+
+    width: 30%;
+    max-width: 40rem;
   }
 }
 
